# annotator-metrics

./: .gitignore  .gitmodules  README.md  environment.yml  metric-evaluations.ipynb  monitor.py  monitor.sh  setup.cfg  setup.py
annotator_metrics/src/: metrics_evaluations.py  preprocessing.py
annotator_metrics/util/: dask_util.py  doc_io.py  doc_util.py  image_io.py  image_util.py  io_util.py  plot_util.py  url_util.py
local-config/: run-config.yaml
lsf-config/: dask-config.yaml
