[metadata]
name = annotator_metrics
version = 0.0.1
author = David Ackerman
author_email = ackermand@janelia.hhmi.org
description = calculate quality metrics for predictions, refinements and inter-/intra- annotator comparisons
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/janelia-cosem/annotator-metrics
project_urls =
    Bug Tracker = https://github.com/janelia-cosem/annotator-metrics/issues
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7.11

[options.entry_points]
console_scripts =
    annotator-metrics = annotator_metrics.src.metrics_evaluations:main